--- a/src/css/Chat.css
+++ b/src/css/Chat.css
@@ -71,11 +71,15 @@
   
   .message_bar{
     height:auto !important;
-    width:100% !important;
-    float: left !important;
+    width:97% !important;
+    max-width:650px !important;
     color: #1a1a1a !important;
-    position:relative;
     bottom: 0px !important;
+    position: fixed !important;
+    display: block !important;
+    bottom: 0 !important;
+    float: left !important;
   }
   
   
+
