--- a/src/css/Chat.css
+++ b/src/css/Chat.css
@@ -77,9 +77,11 @@
     bottom: 0px !important;
     position: fixed !important;
     display: block !important;
-    bottom: 0 !important;
+    bottom: 14 !important;
     float: left !important;
   }
   
-  
+  .maya-input{
+    border-radius: 8px !important;
+  }
 
