--- a/src/css/Chat.css
+++ b/src/css/Chat.css
@@ -63,7 +63,7 @@
   
   .gap{
     width:100%;
-    height: 50px;
+    height: 100px;
     display: block;
     float: left;
   }
@@ -71,23 +71,22 @@
   
   .message_bar{
     height:auto !important;
-    width:97% !important;
-    max-width:650px !important;
     color: #000000 !important;
-    background-color: #ececec !important;
-    bottom: 0px !important;
+    background-color: #eceaea !important;
     position: fixed !important;
     display: block !important;
     padding: 5px !important;
     padding-bottom: 14px !important;
     bottom: 0 !important;
     float: left !important;
-    border-top-left-radius: 8px !important;
-    border-top-right-radius: 8px !important;
+    /* border-top-left-radius: 8px !important;
+    border-top-right-radius: 8px !important; */
   }
   
   .maya-input{
     border-top-left-radius: 8px !important;
     border-bottom-left-radius: 8px !important;
   }
-
+.maya-input:focus{
+  border: none !important;
+}
