--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -16,6 +16,7 @@
 .headbar {
     padding: 5px !important;
     margin: 0px !important;
+    position: fixed !important;
  }
 
 
@@ -24,12 +25,6 @@
       display: none !important;
   }
 }
-
- .bg-dark{
-    color:  #fff !important;
-     background: rgb(27, 27, 27); 
-    background: linear-gradient(144deg, rgb(10, 10, 10) 3%, rgba(2, 2, 2, 0.663) 57%, rgba(0, 0, 0, 0.727) 80%);
- }
 
  .bg-white{
     color:  rgb(3, 3, 3) !important;
@@ -66,10 +61,13 @@
    text-decoration: none !important;
 }
 .footer{
-    position: fixed !important;
-    bottom: 0px !important;
     padding-bottom: 20px !important;
+    padding: 5px !important;
     background: linear-gradient(to bottom, #ffffff13, #ffffff) !important;
+    width:100% !important;
+    border-top-left-radius: 11px !important;
+    border-top-right-radius: 11px !important;
+    float: left !important;
 }
 
 .tray {
