--- a/src/css/Chat.css
+++ b/src/css/Chat.css
@@ -49,7 +49,7 @@
   
   
   .chat_board{
-    height:80vh !important;
+    height:75vh !important;
     width: 100% !important;
     float: left !important;
     overflow-y: scroll !important;
@@ -58,6 +58,7 @@
     padding: 8px !important;
     overflow-x: hidden !important;
     position: relative !important;
+    background: linear-gradient(to bottom, #ffffff, #e2e2e28f) !important;
   }
   
   
@@ -71,7 +72,7 @@
   
   
   .message_bar{
-    height:20vh !important;
+    height:25vh !important;
     color: #000000 !important;
     background-color: #eceaea !important;
     position: fixed !important;
@@ -86,7 +87,11 @@
   
   .maya-input{
     border-radius: 8px !important;
+    outline: none !important;
+    margin-left:10px !important;
   }
 .maya-input:focus{
-  border: none !important;
+  border: 1px solid #000000 !important;
+  outline: none !important;
 }
+input:focus { outline: none !important; }
