--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,10 @@ body {
 }
 
 
+.bg-silver{
+  background-color: rgba(240, 240, 240, 0.956) !important;
+}
+
 
 .input-dark{
   border:1px solid rgba(24, 24, 24, 0.874) !important;
