--- a/src/css/Buttons.css
+++ b/src/css/Buttons.css
@@ -50,3 +50,10 @@
     color:rgb(99, 7, 70) !important;
     border:none !important;
 }
+
+
+.btn-dark{
+    background-color:rgba(0, 0, 0, 0.911) !important;
+    color:rgb(255, 255, 255) !important;
+    border:none !important;
+}
