--- a/src/css/Chat.css
+++ b/src/css/Chat.css
@@ -73,9 +73,20 @@
     padding: 8px !important;
     overflow-x: hidden !important;
     position: relative !important;
-    background: linear-gradient(to bottom, #ffffff 70%, #cdcdcd3b) !important;
+    background: linear-gradient(to bottom, #ffffff 70%, #cdcdcd3b);
   }
+
+
+
+.grade-white{
+  background: linear-gradient(to bottom, #ffffff 70%, #cdcdcd3b);
+}
   
+  
+
+.grade-dark{
+  background: linear-gradient(to bottom, #202020 70%, #000000);
+}
   
   .center_convo{
     height:auto;
@@ -114,9 +125,16 @@
     border-radius: 8px !important;
     outline: none !important;
     margin-left:20px !important;
+    border: 1px solid #000000 !important;
   }
 .maya-input:focus{
   border: 1px solid #000000 !important;
   outline: none !important;
 }
 input:focus { outline: none !important; }
+
+
+.bg-grey{
+  color: #ffffff !important;
+  background-color: #3e3e3e !important;
+}
