--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,15 @@ body {
    background:#fff !important;
 }
 
+
+.dark{
+  color:  rgb(3, 3, 3) !important;
+}
+
+.light{
+  color:  rgb(255, 255, 255) !important;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
