--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,9 @@ body {
 .light{
   color:  rgb(255, 255, 255) !important;
 }
-
+.red{
+  color:red !important;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
